--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1024" ResizeMode="NoResize" 
+        Title="MainWindow" Height="745" Width="1024" ResizeMode="NoResize" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         WindowStartupLocation="CenterScreen"
-        
-        
+        WindowState="Maximized"
+        FontSize="15"
         WindowStyle="SingleBorderWindow">
     <Window.Resources>
         <ResourceDictionary>
@@ -17,25 +17,28 @@
                 <ResourceDictionary />
             </ResourceDictionary.MergedDictionaries>
 
-            <Style x:Key="MenuButtonStyle" TargetType="{x:Type Button}">
+            <Style x:Key="MenuButtonStyle" TargetType="{x:Type ToggleButton}">
                 <Setter Property="Background" Value="WhiteSmoke"/>
+                <Setter Property="Foreground" Value="Gray"/>
+                <Setter Property="Margin" Value="20,10,-1, 0"/>
                 <Setter Property="HorizontalContentAlignment" Value="Left"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
-                <Setter Property="Height" Value="50"/>
+                <Setter Property="Height" Value=" 40"/>
                 <Setter Property="Template">
                     <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Button}">
+                        <ControlTemplate TargetType="{x:Type ToggleButton}">
                             <Border Background="{TemplateBinding Background}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
-                                    CornerRadius="20,0,20,0">
+                                    CornerRadius="10,0,0,10">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="30"/>
                                         <ColumnDefinition/>
                                     </Grid.ColumnDefinitions>
                                     <Path Data="{TemplateBinding Tag}"
+                                          Fill="{TemplateBinding Foreground}"
                                           Style="{StaticResource {x:Type Path}}"/>
-                                    
+
                                     <ContentPresenter Content="{TemplateBinding Content}"
                                                       Grid.Column="1"
                                                       TextBlock.TextAlignment="Left"                                                     
@@ -43,14 +46,16 @@
                                 </Grid>
                             </Border>
                             <ControlTemplate.Triggers>
-                                <Trigger Property="IsPressed" Value="True">
-                                    <Setter Property="Background" Value="Silver"/>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter Property="Background" Value="LightGray"/>
+                                    <Setter Property="Foreground" Value="Teal"/>
+                                    <Setter Property="FontWeight" Value="DemiBold"/>
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
-                
+
             </Style>
         </ResourceDictionary>
     </Window.Resources>
@@ -61,37 +66,38 @@
             <Grid.ColumnDefinitions>
                 <!--Left panel-->
                 <ColumnDefinition Width="250"/>
-                <!--Main-->                
+                <!--Main-->
                 <ColumnDefinition/>
                 <!--Right panel-->
-                <ColumnDefinition Width="250"/>
+               
             </Grid.ColumnDefinitions>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
+
                 <StackPanel Grid.Row="0">
                     <Image Source="Images/PROSST.jpg" Width="250" Height="100" />
-                    <Separator VerticalAlignment="Bottom" Background="Silver"/>
+                    <Separator VerticalAlignment="Bottom" Background="Silver" Width="200"/>
                 </StackPanel>
-               <!-- DashBoard Button -->
-                <StackPanel Grid.Row="1" VerticalAlignment="Center"
-                            Width="200">
+
+                <!-- DashBoard Button -->
+                <StackPanel Grid.Row="1" VerticalAlignment="Center">
                     <Button Content="DashBoard">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Height" Value="50" />
                                 <Setter Property="Width" Value="200"/>
+                                <Setter Property="Margin" Value="10,15,0,0"/>
                                 <Setter Property="Background" Value="LightGray"/>
                                 <Setter Property="Foreground" Value="Gray"/>
                                 <Setter Property="FontWeight" Value="SemiBold"/>
-                                <Setter Property="FontSize" Value="20"/>
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
-                                
+
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="{x:Type Button}">
@@ -108,16 +114,14 @@
                                                         <Ellipse.Fill>
                                                             <ImageBrush ImageSource="/Images/PROSST.jpg"
                                                                 Stretch="UniformToFill"/>
-                                                            
+
                                                         </Ellipse.Fill>
                                                     </Ellipse>
                                                     <ContentPresenter Content="{TemplateBinding Content}"
                                                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                                                 </Grid>
-                                                
-
-                                            </Border> 
+                                            </Border>
                                         </ControlTemplate>
                                     </Setter.Value>
                                 </Setter>
@@ -125,47 +129,107 @@
                         </Button.Style>
                     </Button>
                     <Grid Width="70" HorizontalAlignment="Left"
-                          Margin="0,10">
+                          Margin="40,10">
                         <TextBlock Text="Logout"
                                    FontSize="15"
                                    VerticalAlignment="Center"
                                    Foreground="LightGray"/>
                         <Path HorizontalAlignment="Right"
-                              VerticalAlignment="Center"></Path>
+                              VerticalAlignment="Center"/>
 
                     </Grid>
                 </StackPanel>
                 <Separator Grid.Row="1" VerticalAlignment="Bottom"
                            Width="200"
                            Background="LightGray"/>
-                
-                <!--Mune Button-->
+
+                <!--Menu Button-->
                 <StackPanel Grid.Row="2"
                             Width="200"
                             Margin="0,10">
-                    <Button Style="{StaticResource MenuButtonStyle}"
-                            
-                            Content="Home">                        
-                    </Button>
-                    <Button Style="{StaticResource MenuButtonStyle}"
-                            
-                            Content="Home">
-                    </Button>
-                    <Button Style="{StaticResource MenuButtonStyle}"
-                           
-                            Content="Home">
-                    </Button>
-                    <Button Style="{StaticResource MenuButtonStyle}"
-                            
-                            Content="Home">
-                    </Button>
-                    <Button Style="{StaticResource MenuButtonStyle}"
-                            
-                            Content="Home">
-                    </Button>
+                    <RadioButton 
+                        IsChecked="True"
+                        Style="{StaticResource MenuButtonStyle}"
+                        Content="Dash Board"
+                        GroupName="Menu">
+                    </RadioButton>
+                    <RadioButton 
+                        Style="{StaticResource MenuButtonStyle}"
+                        Content="Home"
+                        GroupName="Menu">
+                    </RadioButton>
+                    <RadioButton 
+                        Style="{StaticResource MenuButtonStyle}"
+                        Content="Home"
+                        GroupName="Menu">
+                    </RadioButton>
+                    <RadioButton 
+                        Style="{StaticResource MenuButtonStyle}"
+                        Content="Home"
+                        GroupName="Menu">
+                    </RadioButton>
                 </StackPanel>
+            </Grid>
 
-            </Grid>            
-        </Grid>  
+            <!--Search box and New Button-->
+            <Grid 
+                Grid.Column="1"  
+                Background="#e1e4e6">
+                <Grid 
+                     Height="100"
+                    Margin="40,0, 0,0"
+                     VerticalAlignment="Top">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="200"/>
+                    </Grid.ColumnDefinitions>
+                    <Border 
+                        Background="WhiteSmoke" 
+                        CornerRadius="10"
+                        Height="50">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition Width="50"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Path Style="{StaticResource {x:Type Path}}"/>
+                            <!--Cần thêm hình ảnh kính lup search-->
+
+                            <TextBlock
+                                Grid.ColumnSpan="3"
+                                Foreground="Gray"
+                                Padding="50,0"
+                                Text="Search"
+                                TextAlignment="Left"
+                                VerticalAlignment="Center"/>
+
+                            <Path Style="{StaticResource {x:Type Path}}"/>
+                            <!--Cần thêm hình ảnh micro-->
+
+                        </Grid>
+                    </Border>
+                    <Button 
+                        Grid.Column="1"
+                        Height="50"
+                        Margin="10,25,20,25"
+                        BorderThickness="0"
+                        Background="Teal"
+                        Foreground="White">
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="20"/>
+                            </Style>
+                        </Button.Resources>
+                        <Button.Content>
+                            <TextBlock Text="CREATE"></TextBlock>
+                        </Button.Content>
+                        
+
+                    </Button>
+                </Grid>
+            </Grid>
+        </Grid>
     </Border>
 </Window>
