--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -69,7 +69,8 @@
                 <!--Main-->
                 <ColumnDefinition/>
                 <!--Right panel-->
-               
+                <ColumnDefinition Width="350"/>
+
             </Grid.ColumnDefinitions>
             <Grid>
                 <Grid.RowDefinitions>
@@ -82,22 +83,35 @@
 
                 <StackPanel Grid.Row="0">
                     <Image Source="Images/PROSST.jpg" Width="250" Height="100" />
+                    <TextBlock 
+                        Text="CÔNG TY TNHH KỸ THUẬT " 
+                        FontSize="18"
+                        Foreground="TEAL"
+                        HorizontalAlignment="Center"
+                        FontWeight="DemiBold"
+                        Margin="0 0 0 10"/>
+                    <TextBlock 
+                        Text="GIẢI PHÁP LƯU TRỮ PRO"
+                        FontSize="18" 
+                        Foreground="TEAL"
+                        HorizontalAlignment="Center"
+                        FontWeight="DemiBold"
+                        Margin="0 0 0 10"       />
                     <Separator VerticalAlignment="Bottom" Background="Silver" Width="200"/>
                 </StackPanel>
 
                 <!-- DashBoard Button -->
                 <StackPanel Grid.Row="1" VerticalAlignment="Center">
-                    <Button Content="DashBoard">
+                    <Button Content="Mr Vinh Quang">
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
-                                <Setter Property="Height" Value="50" />
-                                <Setter Property="Width" Value="200"/>
+                                <Setter Property="Height" Value="70" />
+                                <Setter Property="Width" Value="220"/>
                                 <Setter Property="Margin" Value="10,15,0,0"/>
                                 <Setter Property="Background" Value="LightGray"/>
                                 <Setter Property="Foreground" Value="Gray"/>
                                 <Setter Property="FontWeight" Value="SemiBold"/>
                                 <Setter Property="HorizontalAlignment" Value="Center"/>
-
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="{x:Type Button}">
@@ -106,20 +120,20 @@
                                                     BorderThickness="{TemplateBinding BorderThickness}">
                                                 <Grid>
                                                     <Ellipse HorizontalAlignment="Left"
-                                                             Width="40"
-                                                             Height="40"                                                             
+                                                             Width="60"
+                                                             Height="60"                                                             
                                                              Stroke="White"
                                                              StrokeThickness="2"
                                                              Margin="2 0">
                                                         <Ellipse.Fill>
-                                                            <ImageBrush ImageSource="/Images/PROSST.jpg"
+                                                            <ImageBrush ImageSource="/Images/AT.jpg"
                                                                 Stretch="UniformToFill"/>
 
                                                         </Ellipse.Fill>
                                                     </Ellipse>
                                                     <ContentPresenter Content="{TemplateBinding Content}"
                                                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Margin="74,24,36.4,24.8" Width="108"/>
                                                 </Grid>
                                             </Border>
                                         </ControlTemplate>
@@ -136,6 +150,14 @@
                                    Foreground="LightGray"/>
                         <Path HorizontalAlignment="Right"
                               VerticalAlignment="Center"/>
+                        <materialDesign:PackIcon 
+                            Kind="Logout"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom"
+                            Foreground="LightGray"
+                            Height="20"
+                            Width="20" 
+                            Margin="-5 0"/>
 
                     </Grid>
                 </StackPanel>
@@ -150,22 +172,23 @@
                     <RadioButton 
                         IsChecked="True"
                         Style="{StaticResource MenuButtonStyle}"
-                        Content="Dash Board"
+                        Content="Trang Chính"
+                        GroupName="Menu"
+                        Tag="{StaticResource MaterialDesignPaperDarkButton}">
+                    </RadioButton>
+                    <RadioButton 
+                        Style="{StaticResource MenuButtonStyle}"
+                        Content="Nhập Kho"
                         GroupName="Menu">
                     </RadioButton>
                     <RadioButton 
                         Style="{StaticResource MenuButtonStyle}"
-                        Content="Home"
+                        Content="Xuất Kho"
                         GroupName="Menu">
                     </RadioButton>
                     <RadioButton 
                         Style="{StaticResource MenuButtonStyle}"
-                        Content="Home"
-                        GroupName="Menu">
-                    </RadioButton>
-                    <RadioButton 
-                        Style="{StaticResource MenuButtonStyle}"
-                        Content="Home"
+                        Content="Thông tin"
                         GroupName="Menu">
                     </RadioButton>
                 </StackPanel>
@@ -193,9 +216,27 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition Width="50"/>
                             </Grid.ColumnDefinitions>
-
-                            <Path Style="{StaticResource {x:Type Path}}"/>
-                            <!--Cần thêm hình ảnh kính lup search-->
+                            <StackPanel Grid.Column="0">
+                                <materialDesign:PackIcon 
+                                    Kind="Search" 
+                                    Height="50" 
+                                    Width="30"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"                                    
+                                    Foreground="Gray" RenderTransformOrigin="0.633,0.593"
+                                    />
+                            </StackPanel>
+                            <StackPanel Grid.Column="2">
+                                <materialDesign:PackIcon 
+                                    Kind="MicNone" 
+                                    Height="50" 
+                                    Width="30"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Foreground="Gray" RenderTransformOrigin="0.633,0.593"
+                                    />
+                            </StackPanel>
+                           
 
                             <TextBlock
                                 Grid.ColumnSpan="3"
@@ -205,8 +246,7 @@
                                 TextAlignment="Left"
                                 VerticalAlignment="Center"/>
 
-                            <Path Style="{StaticResource {x:Type Path}}"/>
-                            <!--Cần thêm hình ảnh micro-->
+                            
 
                         </Grid>
                     </Border>
@@ -225,7 +265,7 @@
                         <Button.Content>
                             <TextBlock Text="CREATE"></TextBlock>
                         </Button.Content>
-                        
+
 
                     </Button>
                 </Grid>
